--- a/index.html
+++ b/index.html
@@ -8,48 +8,15 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Exposition Ski Club Villars:</h5></u>
-
-		11-19 janvier. Vernissage : 11 jan 17h30-20h30<br />
-		<br />
-
-		<a href="/img/scv_expo_poster.jpg">
-			<img class="u-max-full-width" src="/img/scv_expo_poster.jpg" />
-		</a>
-<!--
-		<u><h5>Christmas Opening Hours:</h5></u>
-		<br />
-		<a href="/img/xmas_2019.jpg">
-			<img class="u-max-full-width" src="/img/xmas_2019.jpg" />
-		</a>
-
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
-		Samedi 21 dec : 17h30-20h30<br />
-		Notre 3<sup>e</sup> anniversaire<br />
+		Vendredi 14 fév : 17h-20<br />
+		Soirée St Valentin<br />
 		<br />
 
-		<a href="/img/artpero_dec19.jpg">
-			<img class="u-max-full-width" src="/img/artpero_dec19.jpg" />
+		<a href="/img/artpero_feb20.jpg">
+			<img class="u-max-full-width" src="/img/artpero_feb20.jpg" />
 		</a>
-
-		<u><h5>November Sale!</h5></u>
-
-		10% off all items in the gallery during November:<br />
-
-		<a href="/img/sale_nov19.jpg">
-			<img class="u-max-full-width" src="/img/sale_nov19.jpg" />
-		</a>
-
-		<u><h5>Clay Modelling Workshops</h5></u>
-
-		5, 6, et 7 octobre : 10h-13h<br />
-		6 et 7 octobre (pour les enfants) : 15h-17h<br />
-
-		<a href="/img/workshop_oct.jpg">
-			<img class="u-max-full-width" src="/img/workshop_oct.jpg" />
-		</a>
--->
 
 	</div>
 
