--- a/downloads/index.html
+++ b/downloads/index.html
@@ -27,32 +27,42 @@ image_dir: /img/
 
 
 <div class="row">
-	<div class="two columns">
+	<div class="four columns">
+		<a href="/downloads/previous_artperos/artpero_feb20.jpg">
+			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_feb20.jpg" alt="February 2020" />
+		</a>
+	</div>
+	<div class="four columns">
 		<a href="/downloads/previous_artperos/scv_expo_poster.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/scv_expo_poster.jpg" alt="Ski Clib Villars Expo" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="four columns">
 		<a href="/downloads/previous_artperos/artpero_dec19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_dec19.jpg" alt="December 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+</div>
+
+<br />
+
+<div>
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_nov19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_nov19.jpg" alt="November 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_oct19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_oct19.jpg" alt="October 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_sep19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_sep19.jpg" alt="September 2019" />
 		</a>
 	</div>
-	<div class="two columns">
+	<div class="three columns">
 		<a href="/downloads/previous_artperos/artpero_jul19.jpg">
 			<img class="u-max-full-width" src="/downloads/previous_artperos/artpero_jul19.jpg" alt="July 2019" />
 		</a>
