--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
+		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
+
+		Samedi 21 mars : 18h-20h30<br />
+		<br />
+
+		<a href="/img/artpero_mar20.jpg">
+			<img class="u-max-full-width" src="/img/artpero_mar20.jpg" />
+		</a>
+
+<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
-		28 et 29 février (pour les adultes) : 14h30-16h30<br />
-		1er mars (pour adultes et/ou enfants) : 14h30-16h30<br />
+		5, 6, et 7 octobre : 10h-13h<br />
+		6 et 7 octobre (pour les enfants) : 15h-17h<br />
 
-		<a href="/img/workshop_feb.jpg">
-			<img class="u-max-full-width" src="/img/workshop_feb.jpg" />
+		<a href="/img/workshop_oct.jpg">
+			<img class="u-max-full-width" src="/img/workshop_oct.jpg" />
 		</a>
+-->
 
 	</div>
 
