--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
-		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
+		<u><h5><strike>Prochaine Artpéro / Next Artpéro</strike></h5></u>
 
-		Samedi 21 mars : 18h-20h30<br />
-		<br />
+		<strike>Samedi 21 mars : 18h-20h30</strike><br />
+		Annulé<br />
 
+		<a href="/img/closure_fr.jpg">
+			<img class="u-max-full-width" src="/img/closure_fr.jpg" />
+		</a>
+<!--
 		<a href="/img/artpero_mar20.jpg">
 			<img class="u-max-full-width" src="/img/artpero_mar20.jpg" />
 		</a>
 
-<!--
 		<u><h5>Clay Modelling Workshops</h5></u>
 
 		5, 6, et 7 octobre : 10h-13h<br />
