--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@ layout: main
 		Sam: --------- 14.30-18.00<br />
 		Dim: Fermé<br />
 		<br />
-		<a href="mailto:info@galeriealpine.com"><i class=""></i>info@galeriealpine.com</a><br />
-		024 495 1010<br />
-		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
-		<br />
 
-<!--
-		<a href="/img/artpero_mar20.jpg">
-			<img class="u-max-full-width" src="/img/artpero_mar20.jpg" />
+		<a href="/img/reopening.jpg">
+			<img class="u-max-full-width" src="/img/reopening.jpg" />
 		</a>
+<!--
 
 		<u><h5>Clay Modelling Workshops</h5></u>
 
