--- a/artists/index.html
+++ b/artists/index.html
@@ -3,100 +3,104 @@ title: The Artists
 layout: main
 ---
 
-<h3>Association Artists</h3>
+<div class="artists">
 
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/SJS-FB-Portrait-200x200.jpg" />
+	<h3>Association Artists</h3>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/SJS-FB-Portrait-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>
+				<a href="/artists/sophie-scott/">Sophie Scott</a>
+				&nbsp;
+				<a href="mailto:sjs@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+				<a href="https://www.instagram.com/sophiescott_art/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			</h5>
+			<p>Works in oil, pastels and watercolour. Sophie's paintings bring to life the colours of the mountains.</p>
+			<p>Oeuvres en huile, pastels et aquarelles. Les peintures de Sophie animent les couleurs des montagnes.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/sophie_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="six columns">
-		<h5>
-			<a href="/artists/sophie-scott/">Sophie Scott</a>
-			&nbsp;
-			<a href="mailto:sjs@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-			<a href="https://www.instagram.com/sophiescott_art/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-		</h5>
-		<p>Works in oil, pastels and watercolour. Sophie's paintings bring to life the colours of the mountains.</p>
-		<p>Oeuvres en huile, pastels et aquarelles. Les peintures de Sophie animent les couleurs des montagnes.</p>
+
+	<hr>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>
+				<a href="/artists/cat-saunders/">Cat Saunders</a>
+				&nbsp;
+				<a href="http://www.catsaundersart.work/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/catsaundersart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:cat@catsaundersart.work"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h5>
+			<p>Works in acrylic, silver-leaf and gouache. Cat's delicate touch captures the detail of her subjects.</p>
+			<p>Oeuvres en acrylique, feuille d'argent et gouache. La touche délicate de la peinture de Cat saisit le détail de ses sujets.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/cat_mosaic.jpg" />
+		</div>
 	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/sophie_mosaic.jpg" />
+
+	<hr>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/rob-portrait-200x200.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>
+				<a href="/artists/rob-scott/">Rob Scott</a>
+				&nbsp;
+				<a href="mailto:rob@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+				<a href="https://www.instagram.com/robscott12/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+			</h5>
+			<p>Graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort.</p>
+			<p>Graphiste et illustrateur avec une passion de la beauté de la région de Villars-Gryon.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/rob_mosaic.jpg" />
+		</div>
 	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/lee-avatar.jpg" />
+		</div>
+		<div class="six columns">
+			<h5>
+				<a href="/artists/lee-johnson/">Lee Johnson</a>
+				&nbsp;
+				<a href="https://leejo.github.io"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
+				<a href="https://www.instagram.com/leejebay/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
+				<a href="mailto:lee@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
+			</h5>
+			<p>Photographer working on long term projects using traditional analog techniques.</p>
+			<p>Photographe travaillant sur des projets à long terme utilisant des techniques analogiques traditionnelles.</p>
+		</div>
+		<div class="three columns">
+			<img class="u-max-full-width" src="/img/artists/lee_mosaic.jpg" />
+		</div>
+	</div>
+
+	<hr>
+
+	<h3>Visiting Artists</h3>
+
+	{% include visiting_artists.html %}
+
+	<hr>
+
+	<h3>Previous Artists</h3>
+
+	{% include previous_artists.html %}
+
 </div>
-
-<hr>
-
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
-	</div>
-	<div class="six columns">
-		<h5>
-			<a href="/artists/cat-saunders/">Cat Saunders</a>
-			&nbsp;
-			<a href="http://www.catsaundersart.work/"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="https://www.instagram.com/catsaundersart/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-			<a href="mailto:cat@catsaundersart.work"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h5>
-		<p>Works in acrylic, silver-leaf and gouache. Cat's delicate touch captures the detail of her subjects.</p>
-		<p>Oeuvres en acrylique, feuille d'argent et gouache. La touche délicate de la peinture de Cat saisit le détail de ses sujets.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/cat_mosaic.jpg" />
-	</div>
-</div>
-
-<hr>
-
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/rob-portrait-200x200.jpg" />
-	</div>
-	<div class="six columns">
-		<h5>
-			<a href="/artists/rob-scott/">Rob Scott</a>
-			&nbsp;
-			<a href="mailto:rob@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-			<a href="https://www.instagram.com/robscott12/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-		</h5>
-		<p>Graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort.</p>
-		<p>Graphiste et illustrateur avec une passion de la beauté de la région de Villars-Gryon.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/rob_mosaic.jpg" />
-	</div>
-</div>
-
-<hr>
-
-<div class="row">
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/lee-avatar.jpg" />
-	</div>
-	<div class="six columns">
-		<h5>
-			<a href="/artists/lee-johnson/">Lee Johnson</a>
-			&nbsp;
-			<a href="https://leejo.github.io"><img src="/img/social/if_cloud_22859.png" width="20px" /></a>
-			<a href="https://www.instagram.com/leejebay/"><img src="/img/social/if_instagram-2048-black_167679.png" width="20px" /></a>
-			<a href="mailto:lee@galeriealpine.com"><img src="/img/social/if_mail_678145.png" width="20px" /></a>
-		</h5>
-		<p>Photographer working on long term projects using traditional analog techniques.</p>
-		<p>Photographe travaillant sur des projets à long terme utilisant des techniques analogiques traditionnelles.</p>
-	</div>
-	<div class="three columns">
-		<img class="u-max-full-width" src="/img/artists/lee_mosaic.jpg" />
-	</div>
-</div>
-
-<hr>
-
-<h3>Visiting Artists</h3>
-
-{% include visiting_artists.html %}
-
-<hr>
-
-<h3>Previous Artists</h3>
-
-{% include previous_artists.html %}
