--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@ layout: main
 <div class="row">
 	<div class="six columns">
 
+		<u><h5>Click & Collect</h5></u>
+
+		<p>Following the Federal Council's decision we will be closed from
+		January 18th to February 28th. We therefore welcome the opportunity
+		to be able to invite you to contact us at
+		<a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a>
+		or call 079&nbsp;903&nbsp;2651 between 2pm-6pm if you wish to make a rendezvous
+		to "click and collect" works of art in complete safety</p>
+
+	    <a href="/img/jan_2021_covid.jpg">
+			<img class="u-max-full-width" src="/img/jan_2021_covid.jpg" />
+		</a>
+<!--
+		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 		<u><h5>January Sale!</h5></u>
 
 		10% off all purches greater than 50.- CHF or more in the gallery during January:<br />
@@ -15,7 +29,6 @@ layout: main
 	    <a href="/img/sale_jan_2021.jpg">
 			<img class="u-max-full-width" src="/img/sale_jan_2021.jpg" />
 		</a>
-<!--
 		<u><h5>Prochaine Artpéro / Next Artpéro</h5></u>
 
 		Samedi 19 sep : 18h-20h<br />
