--- a/contact/index.html
+++ b/contact/index.html
@@ -11,13 +11,13 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
 		<br />
 		Opening Hours:<br />
-		Lun: ------- 14h30-18h<br />
-		Mar: ------- 14h30-18h<br />
-		Mer: ------- 14h30-18h<br />
-		Jeu: ------- 14h30-18h<br />
-		Ven: ------- 14h30-18h<br />
-		Sam: ------- 14h30-18h<br />
-		Dim: 10h-13h ---------<br />
+		Lun: ------- 15h-18h<br />
+		Mar: ------- 15h-18h<br />
+		Mer: ------- 15h-18h<br />
+		Jeu: ------- 15h-18h<br />
+		Ven: ------- 15h-18h<br />
+		Sam: 10h-13h 15h-18h<br />
+		Dim: --sur demande--<br />
 		<br />
 	</div>
 	<div class="six columns" id="map-canvas"></div>
